--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -25,6 +25,9 @@
   "devDependencies": {
     "@types/msgpack5": "^3.4.0",
     "babel-minify": "^0.2.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^7.3.0",
     "browserify": "^13.1.1",
     "buffer": "^5.0.7",
     "del": "^2.2.2",
